--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,45 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Lato");
+
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
+.App {
+  text-align:center;
+  width:auto;
+  overflow: hidden;
+  max-width: auto;
+  padding:0 0;
+}
+
+.splash-image{
+  background: url('./images/background.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-size: 1rem;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  justify-content: center;
+  align-items: center;
+  position:relative;
+  padding-bottom:3em;
+  height:100vh;
+}
+.logo-row{
+  text-align:left;
+  max-width:30em;
+  padding-top:1em;
+  padding-left:1em;
+}
+.logo-row p{
+  padding-left:3em;
+  color: #141431;
+}
+.logo{
+  width:100%;
+}
+
